Finished "add a model"

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-d1947ec3-65f5-4f48-9b11-478f40c80148;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
